# poke-python

./: .coveragerc  .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
src/poke_python/: enums.py
src/poke_python/api/: pokeapi_client.py
src/poke_python/models/: pokemon.py
src/poke_python/services/: pokemon_service.py
src/poke_python/tests/: conftest.py  test_pokeapi_client.py  test_pokemon_service.py
